@@ -1,7 +1,8 @@
 Django==1.4.0
 
 South==0.7.5
-django-debug-toolbar==0.8.5
+django-debug-toolbar==0.9.1
+
 sorl-thumbnail==3.2.5
 django-tinymce==1.5.1a2
 django-extensions==0.6
